--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -9,6 +9,7 @@
         <label for="title" class="form-label">Title</label>
 
         <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" required/>
+        <div class="valid-feedback">Title looks good!</div>
       </div>
       
 
