--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -31,6 +31,8 @@
           <label for="price" class="form-label">Price</label>
   
           <input  name="listing[price]" placeholder="24000" type="number" class="form-control" required/>
+          <div class="invalid-feedback">Please give vaild price</div>
+
         </div>
         
   
@@ -38,6 +40,8 @@
           <label for="country" class="form-label">Country</label>
   
           <input name="listing[country]" placeholder="India" type="text" class="form-control" required/>
+          <div class="invalid-feedback">Please enter vaild country name!</div>
+
           
         </div>
   
