--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,18 +2,20 @@
 <div class="row mt-3">
   <div class="col-8 offset-2">
     <h3>Edit your Listing</h3>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
 
-        <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control"/>
+        <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" required/>
+        <div class="valid-feedback">Title looks good!</div>
+
     </div>
 
       <div class="mb-3">
         <label for="description" class="form-label">Description</label>
 
 
-      <textarea name="listing[description]" class="form-control"><%= listing.description %></textarea>
+       <textarea name="listing[description]" class="form-control" required><%= listing.description %></textarea>
 
 
         
@@ -22,7 +24,7 @@
         <label for="image" class="form-label">Image Link</label>
 
 
-      <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" />
+      <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" required />
 
         
       </div>
@@ -32,7 +34,7 @@
           <label for="price" class="form-label">Price</label>
   
   
-        <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" />
+        <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" required />
   
           
         </div>
@@ -40,7 +42,7 @@
           <label for="country" class="form-label">Country</label>
   
   
-        <input name="listing[country]" value="<%= listing.country %>"  type="text" class="form-control"/>
+        <input name="listing[country]" value="<%= listing.country %>"  type="text" class="form-control" required/>
         </div>
 
       </div>
@@ -50,12 +52,13 @@
         <label for="location" class="form-label">Location</label>
 
 
-        <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control" />
+        <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control" required/>
       </div>
       <br /><br />
       <button class="btn btn-dark edit-btn mt-3">Edit</button>
     </form>
 
   </div>
-</div>    
+</div>   
+<script src="/js/script"></script> 
     
